// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Board renders 9 slots 1`] = `
<div
  className="sc-bwzfXH fkTWXJ"
>
  <div
    className="sc-bdVaJa gigbzF"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    onClick={[Function]}
  />
</div>
`;

exports[`Board renders filled slots 1`] = `
<div
  className="sc-bwzfXH fkTWXJ"
>
  <div
    className="sc-bdVaJa heJmyo"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa kiPKqZ"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    onClick={[Function]}
  />
</div>
`;
